--- a/four/index.html
+++ b/four/index.html
@@ -83,7 +83,52 @@
             <!--<a href="/four" aria-current="page" class=""> -->
                 <h1><span>Restaverse</span></h1>
             <!--</a> -->
-        </div><div class="Container-sc-1ab0bzv-0 iMlVqW mainContainer"><div class="fourstyle__MainContentSection-sc-1qfzxsa-4 dvjOdh"><div class="fourstyle__NormalClockWrapper-sc-1qfzxsa-3 jpMizN"><div class="NormalClock"><div class="NormalUnitContainer"><div class="NormalupperCard"><span>11</span></div><div class="digitLabel"><label><span>days</span></label></div></div><div class="NormalUnitContainer"><div class="NormalupperCard"><span>23</span></div><div class="digitLabel"><label><span>hours</span></label></div></div><div class="NormalUnitContainer"><div class="NormalupperCard"><span>17</span></div><div class="digitLabel"><label><span>minutes</span></label></div></div><div class="NormalUnitContainer"><div class="NormalupperCard"><span>27</span></div><div class="digitLabel"><label><span>seconds</span></label></div></div></div></div><h2><span>We are launching soon please reload after days</span></h2><p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit sed eiu sit amet consectetur adipisicing</span></p><div class="fourstyle__ContactFormWrap-sc-1qfzxsa-5 eXbrgY"><form class="ConatctFormstyle__Form-sc-1oadt3-0 bLusgr"><div class="TextField__FieldWrapper-sc-1qgjuys-0 ftsYsS field-wrapper"><input type="email" placeholder="Enter email address" id="user_email" value="" autocomplete="off" required="" class="TextField__Input-sc-1qgjuys-4 fHarcA"></div><button type="submit" class="buttonstyle__ButtonStyle-rnuphx-0 ggHLFe reusecore__button"><span class="btn-text"><span>NOTIFY ME</span></span></button></form></div></div></div><div class="fourstyle__FooterSection-sc-1qfzxsa-6 hWLxcw"><div class="SocialShare__Wrapper-h9wts-0 qJGGM social_profiles"><div class="SocialShare__Item-h9wts-1 fvcUgI social_profile_item"><a href="/four"><i fill="currentColor" style="display:inline-block"><svg fill="currentColor" style="display:inline-block;vertical-align:middle" height="22" width="22" viewBox="0 0 512 512"><path d="M288,192v-38.1c0-17.2,3.8-25.9,30.5-25.9H352V64h-55.9c-68.5,0-91.1,31.4-91.1,85.3V192h-45v64h45v192h83V256h56.4l7.6-64
+        </div><div class="Container-sc-1ab0bzv-0 iMlVqW mainContainer"><div class="fourstyle__MainContentSection-sc-1qfzxsa-4 dvjOdh">
+            <div class="fourstyle__NormalClockWrapper-sc-1qfzxsa-3 jpMizN">
+                <div class="NormalClock">
+                    <div class="NormalUnitContainer">
+                        <div class="NormalupperCard">
+                            <span></span>
+                        </div>
+                        <div class="digitLabel">
+                            <label>
+                                <span>days</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="NormalUnitContainer">
+                        <div class="NormalupperCard">
+                            <span></span>
+                        </div>
+                        <div class="digitLabel">
+                            <label>
+                                <span>hours</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="NormalUnitContainer">
+                        <div class="NormalupperCard">
+                            <span></span>
+                        </div>
+                        <div class="digitLabel">
+                            <label>
+                                <span>minutes</span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="NormalUnitContainer">
+                        <div class="NormalupperCard">
+                            <span></span>
+                        </div>
+                        <div class="digitLabel">
+                            <label>
+                                <span>seconds</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2><span>We are launching soon please reload after days</span></h2><p><span>Lorem ipsum dolor sit amet consectetur adipisicing elit sed eiu sit amet consectetur adipisicing</span></p><div class="fourstyle__ContactFormWrap-sc-1qfzxsa-5 eXbrgY"><form class="ConatctFormstyle__Form-sc-1oadt3-0 bLusgr"><div class="TextField__FieldWrapper-sc-1qgjuys-0 ftsYsS field-wrapper"><input type="email" placeholder="Enter email address" id="user_email" value="" autocomplete="off" required="" class="TextField__Input-sc-1qgjuys-4 fHarcA"></div><button type="submit" class="buttonstyle__ButtonStyle-rnuphx-0 ggHLFe reusecore__button"><span class="btn-text"><span>NOTIFY ME</span></span></button></form></div></div></div><div class="fourstyle__FooterSection-sc-1qfzxsa-6 hWLxcw"><div class="SocialShare__Wrapper-h9wts-0 qJGGM social_profiles"><div class="SocialShare__Item-h9wts-1 fvcUgI social_profile_item"><a href="/four"><i fill="currentColor" style="display:inline-block"><svg fill="currentColor" style="display:inline-block;vertical-align:middle" height="22" width="22" viewBox="0 0 512 512"><path d="M288,192v-38.1c0-17.2,3.8-25.9,30.5-25.9H352V64h-55.9c-68.5,0-91.1,31.4-91.1,85.3V192h-45v64h45v192h83V256h56.4l7.6-64
         H288z"></path></svg></i></a></div><div class="SocialShare__Item-h9wts-1 fvcUgI social_profile_item"><a href="/four"><i fill="currentColor" style="display:inline-block"><svg fill="currentColor" style="display:inline-block;vertical-align:middle" height="22" width="22" viewBox="0 0 512 512"><path d="M492,109.5c-17.4,7.7-36,12.9-55.6,15.3c20-12,35.4-31,42.6-53.6c-18.7,11.1-39.4,19.2-61.5,23.5
         C399.8,75.8,374.6,64,346.8,64c-53.5,0-96.8,43.4-96.8,96.9c0,7.6,0.8,15,2.5,22.1c-80.5-4-151.9-42.6-199.6-101.3
         c-8.3,14.3-13.1,31-13.1,48.7c0,33.6,17.2,63.3,43.2,80.7C67,210.7,52,206.3,39,199c0,0.4,0,0.8,0,1.2c0,47,33.4,86.1,77.7,95
